--- a/eng/pipelines/common/variables.yml
+++ b/eng/pipelines/common/variables.yml
@@ -59,6 +59,9 @@ variables:
   value: false
 
 # Variable groups required for private builds
+- ${{ if eq(variables['System.TeamProject'], 'DevDiv') }}:
+  - group: Xamarin-Secrets
+  
 - ${{ if or(eq(variables['System.TeamProject'], 'DevDiv'), eq(variables['Build.DefinitionName'], 'dotnet-maui')) }}:
   - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
     - name: PrivateBuild
