--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -70,10 +70,14 @@ parameters:
       - name: Windows
         poolName: $(windowsVmPool)
         vmImage: $(windowsVmImage)
+        demands: { }        
         artifact: build-windows
       - name: macOS
         poolName: $(macOSXVmPool)
         vmImage: $(macOSXVmImage)
+        demands:
+          - macOS.Name -equals Sonoma
+          - macOS.Architecture -equals x64
         artifact: build-macos
  
   - name: PackPlatforms
@@ -82,10 +86,14 @@ parameters:
       - name: Windows
         poolName: $(windowsVmPool)
         vmImage: $(windowsVmImage)
+        demands: { }
         artifact: nuget
       - name: macOS
         poolName: $(macOSXVmPool)
         vmImage: $(macOSXVmImage)
+        demands:
+          - macOS.Name -equals Sonoma
+          - macOS.Architecture -equals x64
         artifact: nuget-macos
 
   - name: BuildTemplatePlatforms
@@ -94,10 +102,14 @@ parameters:
       - name: Windows
         poolName: $(windowsVmPool)
         vmImage: $(windowsVmImage)
+        demands: { }
         artifact: build-windows
       - name: macOS
         poolName: $(macOSXVmPool)
         vmImage: $(macOSXVmImage)
+        demands:
+          - macOS.Name -equals Sonoma
+          - macOS.Architecture -equals x64
         artifact: build-macos
 
   - name: RunTemplatePlatforms
@@ -117,6 +129,15 @@ parameters:
         - macOS.Architecture -equals x64
       testName: RunOniOS
       artifact: templates-run-ios
+
+  - name: MacTemplatePool
+    type: object
+    default:
+      - name: $(windowsVmPool)
+        vmImage: $(windowsVmImage)
+        demands:
+          - macOS.Name -equals Sonoma
+          - macOS.Architecture -equals arm64
 
   - name: TestTargetFrameworks
     type: object
@@ -159,9 +180,7 @@ stages:
             pool:
               name: ${{ BuildPlatform.poolName }}
               vmImage: ${{ BuildPlatform.vmImage }}
-              demands:
-                - macOS.Name -equals Sonoma
-                - macOS.Architecture -equals x64
+              demands: ${{ BuildPlatform.demands }}
             steps:
               - template: common/provision.yml
                 parameters:
@@ -209,9 +228,7 @@ stages:
           pool:
             name: ${{ PackPlatform.poolName }}
             vmImage: ${{ PackPlatform.vmImage }}
-            demands:
-              - macOS.Name -equals Sonoma
-              - macOS.Architecture -equals x64
+            demands: ${{ PackPlatform.demands }}
           variables:
             - name: _buildScript
               value: $(Build.SourcesDirectory)/build.cmd -ci
@@ -265,9 +282,7 @@ stages:
           pool:
             name: ${{ BuildPlatform.poolName }}
             vmImage: ${{ BuildPlatform.vmImage }}
-            demands:
-               - macOS.Name -equals Sonoma
-               - macOS.Architecture -equals x64
+            demands: ${{ BuildPlatform.demands }}
           steps:
             - template: common/provision.yml
               parameters:
@@ -281,7 +296,6 @@ stages:
                   gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
                 ${{ else }}:  
                   skipProvisioning: true
-
             - task: DownloadBuildArtifacts@0
               displayName: 'Download Packages'
               inputs:
@@ -321,12 +335,7 @@ stages:
       parameters:
         RunPlatforms: ${{ parameters.RunTemplatePlatforms }}
         BuildPlatforms: ${{ parameters.BuildTemplatePlatforms }}
-        MacBuildPool:    
-          name: $(macOSXVmPool)
-          vmImage: $(macOSXVmImage)
-          demands:
-            - macOS.Name -equals Sonoma
-            - macOS.Architecture -equals arm64
+        MacBuildPool:   ${{ parameters.MacTemplatePool }}
 
   - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
     - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
