Use a global variable

--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -2,7 +2,7 @@ parameters:
   poolName: ''
   clearCaches: true
   skipXcode: false
-  skipProvisioning: $(skipProvisionator)
+  skipProvisioning: true
   skipAndroidSdks: false
   skipAndroidImages: false
   installDefaultAndroidApi: false
