--- a/eng/pipelines/common/device-tests-steps.yml
+++ b/eng/pipelines/common/device-tests-steps.yml
@@ -13,6 +13,7 @@ parameters:
   useArtifacts: false
   rebootAgent: true
   poolName: 'Azure Pipelines'
+  skipProvisioning: true
 
 steps:
   - ${{ if and(eq(parameters.platform, 'ios'), ne(parameters.poolName, 'Azure Pipelines')) }}:
@@ -34,7 +35,7 @@ steps:
       skipAndroidSdks: ${{ or(eq(parameters.platform, 'ios'), eq(parameters.platform, 'catalyst'))  }}
       installDefaultAndroidApi: ${{ or(eq(parameters.platform, 'ios'), eq(parameters.platform, 'catalyst'))  }}
       provisionatorChannel: ${{ parameters.provisionatorChannel }}
-      ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
+      ${{ if not(parameters.skipProvisioning) }}:
         skipProvisioning: false
         gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
       ${{ else }}:  
